# benoit

./: main.py  pyproject.toml
src/: ascii.py  burning_ship.py  escape_fractal.py  grid.py  julia.py  l_system.py  lyapunov.py  mandelbrot.py  render.py
tests/: test_grid.py  test_julia.py  test_mandelbrot.py
