[project]
name = "benoit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numba>=0.61",
    "numba-cuda>=0.0.12",
    "numpy>=2.2.6",
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = ["src"]
testpaths = [
    "tests",
]
